--- a/run_once_before_install-00-basics.sh.tmpl
+++ b/run_once_before_install-00-basics.sh.tmpl
@@ -7,6 +7,12 @@ core_packages=(
   'zsh' # Needed as bash is crap
 )
 
+# Checks if a given package is installed
+command_exists () {
+  hash "$1" 2> /dev/null
+}
+
+
 function install_debian () {
   echo -e "Installing ${1} via apt-get"
   sudo apt install $1
@@ -48,3 +54,9 @@ for app in ${core_packages[@]}; do
     echo -e "${app} is already installed, skipping"
   fi
 done
+
+# set ZSH as default
+if [[ $SHELL != *"zsh"* ]] && command_exists zsh; then
+  echo -e "Setting ZSH as default shell"
+  chsh -s $(which zsh) $USER
+function
