Check for oh-my-zsh before install

--- a/run_once_before_install-00-basics.sh.tmpl
+++ b/run_once_before_install-00-basics.sh.tmpl
@@ -63,4 +63,6 @@ if [[ $SHELL != *"zsh"* ]] && command_exists zsh; then
 fi
 
 # Install oh-my-zsh
-sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+if [ ! -d ~/.oh-my-zsh ]; then
+  sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+fi
