--- a/run_once_before_install-01-neovim.sh.tmpl
+++ b/run_once_before_install-01-neovim.sh.tmpl
@@ -13,5 +13,9 @@ sudo apt install build-essential
 {{   end }}
 {{ end }}
 
+# Make sure we have clear install
+rm -rf ~/.config/nvim
+rm -rf ~/.local/share/nvim
+
 # NvChad
 git clone https://github.com/NvChad/NvChad ~/.config/nvim --depth 1 && nvim
