--- a/run_once_before_install-01-neovim.sh.tmpl
+++ b/run_once_before_install-01-neovim.sh.tmpl
@@ -1,20 +1,19 @@
 #!/bin/bash
 #
 
+echo -e "Setting up Neovim with NvChad"
 # Neovim and NvChad dependencies install
 {{ if eq .chezmoi.os "darwin" }}
 brew install neovim
 brew install ripgrep
 {{ else if eq .chezmoi.os "linux" }}
 {{   if eq .chezmoi.osRelease.id "ubuntu" }}
-sudo apt install neovim
-sudo apt install ripgrep
-sudo apt install build-essential
+sudo apt install neovim ripgrep build-essential
 {{   end }}
 {{ end }}
 
 # Make sure we have clear install
-if [ -d $HOME/.config/nvimh ]; then
+if [ -d $HOME/.config/nvim ]; then
   rm -rf $HOME/.config/nvim
 fi
 if [ -d $HOME/.local/share/nvim ]; then
