--- a/run_once_before_install-01-neovim.sh.tmpl
+++ b/run_once_before_install-01-neovim.sh.tmpl
@@ -8,7 +8,8 @@ brew install neovim
 brew install ripgrep
 {{ else if eq .chezmoi.os "linux" }}
 {{   if eq .chezmoi.osRelease.id "ubuntu" }}
-sudo apt install neovim ripgrep build-essential
+sudo snap install nvim
+sudo apt install ripgrep build-essential
 {{   end }}
 {{ end }}
 
