--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -1,10 +1,6 @@
 #!/bin/sh
 {{ if eq .chezmoi.os "darwin" }}
-brew install bat
-brew install zoxide
-brew install lazygit
-brew install fzf
-brew install exa
+brew bundle install
 {{ else if eq .chezmoi.os "linux" }}
 {{   if eq .chezmoi.osRelease.id "ubuntu" }}
 sudo apt install bat exa zoxide fzf --assume-yes
