Update .zshrc Update install-packages.sh

--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -20,3 +20,6 @@ rm lazygit.tar.gz
 rm lazygit
 {{   end }}
 {{ end }}
+
+# Install fzf extensions
+$(brew --prefix)/opt/fzf/install --xdg --key-bindings --completion --no-update-rc
