Update .chezmoi.toml Add .chezmoiexternals/neovim.toml Add .chezmoiignore Add .chezmoiscripts/linux/install-packages.sh Add .chezmoiscripts/after-chsh.sh Update .zshrc Remove install-01-basics.sh Remove install-packages.sh Change attributes of .chezmoiscripts/darwin/install-00-install-homebrew.sh Change attributes of .chezmoiscripts/install-02-neovim.sh

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,7 +1,13 @@
+{{- $osID := .chezmoi.os -}}
+{{- if (and (eq .chezmoi.os "linux") (hasKey .chezmoi.osRelease "id")) -}}
+{{-   $osID = printf "%s-%s" .chezmoi.os .chezmoi.osRelease.id -}}
+{{- end -}}
+
 {{- $email := promptStringOnce . "email" "Email address" -}}
 
 [data]
     email = {{ $email | quote }}
+    osid = {{ $osID | quote }}
 
 [git]
     autoCommit = true
