Update .chezmoiscripts/darwin/install-packages.sh Add .config/alacritty/alacritty.toml Add .config/alacritty/catppuccin-frappe.toml Add .config/alacritty/catppuccin-latte.toml Add .config/alacritty/catppuccin-macchiato.toml Add .config/alacritty/catppuccin-mocha.toml

--- a/.chezmoiscripts/darwin/run_once_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_once_before_install-packages.sh.tmpl
@@ -18,6 +18,8 @@ set -eufo pipefail
 -}}
 
 {{ $casks := list 
+     "font-fira-code-nerd-font"
+     "font-roboto-mono-nerd-font"
      "iterm2"
      "visual-studio-code"
      "vlc"
