--- a/.chezmoiscripts/darwin/run_once_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_once_before_install-packages.sh.tmpl
@@ -3,6 +3,7 @@
 set -eufo pipefail
 
 {{ $brews := list
+     "alacritty"
      "bat"
      "curl"
      "exa"
@@ -10,6 +11,7 @@ set -eufo pipefail
      "git"
      "git-lfs"
      "gh"
+     "lazyigit"
      "node"
      "ripgrep"
      "tmux"
@@ -20,7 +22,6 @@ set -eufo pipefail
 {{ $casks := list 
      "font-fira-code-nerd-font"
      "font-roboto-mono-nerd-font"
-     "iterm2"
      "visual-studio-code"
      "vlc"
      "1password-cli"
