--- a/.chezmoiscripts/darwin/run_once_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_once_before_install-packages.sh.tmpl
@@ -3,7 +3,6 @@
 set -eufo pipefail
 
 {{ $brews := list
-     "alacritty"
      "bat"
      "curl"
      "exa"
@@ -11,7 +10,7 @@ set -eufo pipefail
      "git"
      "git-lfs"
      "gh"
-     "lazyigit"
+     "lazygitz"
      "node"
      "ripgrep"
      "tmux"
@@ -20,6 +19,7 @@ set -eufo pipefail
 -}}
 
 {{ $casks := list 
+     "alacritty"
      "font-fira-code-nerd-font"
      "font-roboto-mono-nerd-font"
      "visual-studio-code"
