--- a/.chezmoiscripts/darwin/run_once_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_once_before_install-packages.sh.tmpl
@@ -10,7 +10,7 @@ set -eufo pipefail
      "git"
      "git-lfs"
      "gh"
-     "lazygitz"
+     "lazygit"
      "node"
      "ripgrep"
      "tmux"
