--- a/.chezmoiscripts/darwin/run_once_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_once_before_install-packages.sh.tmpl
@@ -22,6 +22,7 @@ set -eufo pipefail
      "alacritty"
      "font-fira-code-nerd-font"
      "font-roboto-mono-nerd-font"
+     "font-inconsolata-nerd-font"
      "visual-studio-code"
      "vlc"
      "1password-cli"
