--- a/.chezmoiscripts/linux/run_onchange_install-packages.sh.tmpl
+++ b/.chezmoiscripts/linux/run_onchange_install-packages.sh.tmpl
@@ -3,7 +3,6 @@
      "bat"
      "build-essential"
      "curl"
-     "eza"
      "fd-find"
      "fzf"
      "git"
@@ -27,10 +26,25 @@ echo -e "Installing packages..."
 {{ $sudo }}apt-get update
 {{ $sudo }}apt-get install -y {{ $packages | join " " }}
 
+sudo mkdir -p /etc/apt/keyrings
+wget -qO- https://raw.githubusercontent.com/eza-community/eza/main/deb.asc | sudo gpg --dearmor -o /etc/apt/keyrings/gierens.gpg
+echo "deb [signed-by=/etc/apt/keyrings/gierens.gpg] http://deb.gierens.de stable main" | sudo tee /etc/apt/sources.list.d/gierens.list
+sudo chmod 644 /etc/apt/keyrings/gierens.gpg /etc/apt/sources.list.d/gierens.list
+sudo apt update
+sudo apt install -y eza
+
 # fix the bat executable
-if hash batcat 2> /dev/null; then
-  mkdir -p ~/.local/bin
-  ln -s /usr/bin/batcat ~/.local/bin/bat  
+target="/usr/bin/batcat"
+link_name="$HOME/.local/bin/bat"
+
+if hash batcat 2>/dev/null; then
+    mkdir -p "$HOME/.local/bin"
+    if [[ ! -L "$link_name" ]]; then
+        ln -s "$target" "$link_name"
+    fi
+else
+    printf "batcat is not installed\n" >&2
 fi
+
 
 {{ end }}
