gitconfig updated with credentials helper

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,3 +1,9 @@
 [user]
 	email = {{ .email | quote }}
 	name = Erik Simko
+[credential "https://github.com"]
+    helper =
+    helper = !/home/linuxbrew/.linuxbrew/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+    helper =
+    helper = !/home/linuxbrew/.linuxbrew/bin/gh auth git-credential
